@@ -76,3 +76,4 @@ Joe VanAndel                    bug reports
 Greg Ward                       bug reports, patches, etc
 Barry Warsaw                    bug reports
 Matt Wilson                     bug reports and fixes
+Andy Wingo                      bug reports and fixes
