@@ -1,4 +1,5 @@
 Version 0.8.15   - XX XXX 2005
+  * Fix internal error on processing nested scopes (#1114902)
   * Fix constant tuples in Python 2.4
   * Don't warn about implicit/explicit returns in Python 2.4, we can't tell
   * Fix crash when __slots__ was an instance w/o __len__
